2005-12-16  Atsushi Enomoto <atsushi@ximian.com>

	* RelaxngPattern.cs : in WriteCompact(), use WriteNamespace() to
	  let RncWriter handle namespace output by itself.

2005-09-20  Atsushi Enomoto <atsushi@ximian.com>

	* RelaxngValidatingReader.cs : added explicit error message for
	  attribute XmlReader validation (spec section 7.1.5 explicitly
	  prohibits start//attribute so such validation never happens).
	* RelaxngGrammar.cs : name class analysis is now done inside
	  CheckConstraints(), so nothing to add here.
	* RelaxngPattern.cs : (RdpUnresolvedRef) now GetLabels() could be
	  invoked here, so just ignore.

2005-07-31  Atsushi Enomoto <atsushi@ximian.com>

	* RelaxngGrammar.cs : spec 7.3 check is kinda implemented but cannot
	  verify now because of weird exception handling in the runtime.

2005-06-07  Atsushi Enomoto <atsushi@ximian.com>

	* RelaxngReader.cs : When ReadPattern() if no valid pattern appears
	  then raise an error. In Read() when there are only non RELAX NG 
	  elements it resulted in an infinite loop.

2005-04-06  Atsushi Enomoto <atsushi@ximian.com>

	* RelaxngPattern.cs : fixed incorrect use of virtual.

2005-03-18  Atsushi Enomoto <atsushi@ximian.com>

	* XsdDatatypeProvider.cs : quick hack to workaround not to be rejected 
	  under MS.NET because of NOTATION type (thus, NOTATION type is not
	  available in this provider).

2005-03-01  Atsushi Enomoto <atsushi@ximian.com>

	* RelaxngReader.cs : there was two public namespace constant. One
	  should be obsoleted.

2005-03-01  Atsushi Enomoto <atsushi@ximian.com>

	* RelaxngPattern.cs : RdpUnresolvedRef should process empty/notAllowed
	  elimination on its referenced pattern.

2005-02-27  Atsushi Enomoto <atsushi@ximian.com>

	* XsdDatatypeProvider.cs : Added simpleType parameter support.
	* RelaxngValidatingReader.cs : added ReportDetails flag to report all
	  expected element names / attribute names. Removed all unused code.

2005-02-06  Atsushi Enomoto <atsushi@ximian.com>
